# ProgaProject

./: CMakeLists.txt  LocalConfig.cmake
Shaders/: Fragment.glsl
include/: Camera.h  Keyboard.h  Mouse.h  Shader.h  ShaderProgram.h
src/: Camera.cpp  Keyboard.cpp  Mouse.cpp  ProgaProject.cpp  Shader.cpp  ShaderProgram.cpp
